# OnlineTestingSystem

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  env  pyproject.toml
infra/: Dockerfile
src/: tableConvert.com_je5psz.csv
src/apps/tests/: models.py  urls.py  views.py
src/apps/tests/management/commands/: import_tests.py
src/apps/tests/migrations/: 0001_initial.py  0002_initial.py
src/apps/tests/serializers/: answer.py  question.py  test.py
src/apps/users/: models.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/serializers/: user.py
src/core/: settings.py  urls.py
