[tool.poetry]
name = "onlinetestingsystem"
version = "0.1.0"
description = ""
authors = ["Georgy <gosha.sychev.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
drf-spectacular = "^0.28.0"
pre-commit = "^4.2.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
