[tool.poetry]
name = "onlinetestingsystem"
version = "0.1.0"
description = ""
authors = ["Georgy <gosha.sychev.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
djangorestframework = "3.16.0"
psycopg2-binary = "2.9.10"
drf-spectacular = "0.28.0"
pre-commit = "^4.2.0"
python-dotenv = "^1.1.1"
pandas = "^2.3.0"
uvicorn = "0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
